<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sazzad.cas.Home"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/cardview_light_background">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/courseEntry"
                    android:text="@string/course_entry"
                    android:drawableTop="@drawable/courseentry"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/studentEntry"
                    android:text="@string/student_entry"
                    android:drawableTop="@drawable/studententry"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp"
                    android:paddingBottom="10dp"/>

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/smstrEntry"
                    android:text="@string/semester_entry"
                    android:drawableTop="@drawable/semesterentry"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/csList"
                    android:text="@string/course_list"
                    android:drawableTop="@drawable/courselist"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp"
                    android:paddingBottom="10dp"/>

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/stdList"
                    android:text="@string/student_list"
                    android:drawableTop="@drawable/studentlist"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/smstrList"
                    android:text="@string/semester_list"
                    android:drawableTop="@drawable/semesterlist"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp"
                    android:paddingBottom="10dp"/>

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/userList"
                    android:text="@string/registered_user_list"
                    android:drawableTop="@drawable/userslist"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/atndnce"
                    android:text="@string/take_attendance"
                    android:drawableTop="@drawable/attendance"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp"
                    android:paddingBottom="10dp"/>

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/atndnceSheet"
                    android:text="@string/date_specific_attendance_sheet"
                    android:drawableTop="@drawable/attendancesheet"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/fnlAttendanceChart"
                    android:text="@string/final_attendance_chart"
                    android:drawableTop="@drawable/finalattendancechart"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:textSize="12sp"
                    android:paddingBottom="10dp"/>

            </RelativeLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>
